<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EteSync</string>
    <string name="account_type" translatable="false">com.etesync.syncadapter</string>
    <string name="account_type_address_book" translatable="false">com.etesync.syncadapter.address_book</string>
    <string name="account_title_address_book">EteSync Address book</string>
    <string name="address_books_authority" translatable="false">com.etesync.syncadapter.addressbooks</string>
    <string name="address_books_authority_title">Address books</string>
    <string name="help">Help</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="please_wait">Please wait…</string>
    <string name="send">Send</string>
    <string name="create">Create</string>
    <string name="skip">Skip</string>
    <string name="retry">Retry</string>
    <string name="notification_channel_crash_reports">Crash Reports</string>
    <string name="notification_channel_debugging">Debugging</string>
    <string name="notification_channel_general">Other important messages</string>
    <string name="notification_channel_sync">Synchronization</string>
    <string name="notification_channel_sync_errors">Synchronization errors</string>
    <string name="notification_channel_sync_errors_desc">Important errors which stop synchronization like unexpected server replies</string>
    <string name="notification_channel_sync_warnings">Synchronization warnings</string>
    <string name="notification_channel_sync_warnings_desc">Non-fatal synchronization problems like dismissed changes of read-only collections</string>
    <string name="notification_channel_sync_status">Status messages</string>
    <string name="notification_channel_sync_status_desc">Informational status messages like the sync change summary</string>
    <string name="crash_title">EteSync has crashed!</string>
    <string name="crash_message">Please send stack trace to developers.</string>
    <string name="crash_email_subject">EteSync Debug Info</string>
    <string name="crash_email_body">If possible, please include any other relevant information such as what you did to trigger this error.</string>
    <string name="tourguide_title">Did you know?</string>
    <string name="startup_battery_optimization">Battery Optimization</string>
    <string name="startup_battery_optimization_message">Android may disable/reduce EteSync synchronization after a few days. To prevent this, turn off battery optimization.</string>
    <string name="startup_battery_optimization_disable">Turn off for EteSync</string>
    <string name="startup_dont_show_again">Don\'t show again</string>
    <string name="startup_development_version">EteSync Preview Release</string>
    <string name="startup_development_version_message">This is a development version of EteSync. Be aware that things may not work as expected. Please give us constructive feedback to improve EteSync.</string>
    <string name="startup_development_version_give_feedback">Give feedback</string>
    <string name="startup_vendor_specific_bugs">Potential Vendor Bugs</string>
    <string name="startup_vendor_specific_bugs_message">EteSync has detected you are using an Android version that may contain vendor specific bugs.\nPlease take a look at the FAQ for more information.</string>
    <string name="startup_vendor_specific_bugs_open_faq">Open FAQ</string>
    <string name="about_license_terms">License terms</string>
    <string name="about_license_info_no_warranty">This program comes with ABSOLUTELY NO WARRANTY. It is free software, and you are welcome to redistribute it under certain conditions.</string>
    <string name="logging_davdroid_file_logging">EteSync file logging is ON</string>
    <string name="logging_to_external_storage">Logging to external storage: %s</string>
    <string name="logging_to_external_storage_warning">Disabling will delete logs</string>
    <string name="logging_couldnt_create_file">Couldn\'t create external log file: %s</string>
    <string name="logging_no_external_storage">External storage not found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_subtitle">Secure Sync Adapter</string>
    <string name="navigation_drawer_about">About / License</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_external_links">Useful links</string>
    <string name="navigation_drawer_website">Website</string>
    <string name="navigation_drawer_faq">FAQ</string>
    <string name="navigation_drawer_guide">User Guide</string>
    <string name="navigation_drawer_report_issue">Report issue</string>
    <string name="navigation_drawer_contact">Contact</string>
    <string name="account_list_empty">Welcome to EteSync!</string>
    <string name="accounts_global_sync_disabled">System-wide automatic synchronization is disabled</string>
    <string name="accounts_global_sync_enable">Enable</string>
    <string name="accounts_showcase_add">You need to add an account in order to use EteSync. Click here to add one...</string>
    <string name="accounts_missing_permissions">Missing permissions: %s</string>
    <string name="account_wizard_collections_title">Welcome to EteSync!</string>
    <string name="account_wizard_collections_body">In order to start using EteSync you need to create collections to store your data. Click "Create" to create a default calendar, address book and a task list for you.</string>
    <string name="migrate_v2_wizard_welcome_title">EteSync 2.0 Migration</string>
    <string name="migrate_v2_wizard_welcome_body">This tool will help you migrate your data to EteSync 2.0. The migration doesn\'t delete any data. It only copies your data over to the new EteSync 2.0 server. This means that there is no risk of data-loss in the migration.</string>
    <string name="migrate_v2_wizard_welcome_body_extra">Please make sure you have a good internet connection and enough battery as this may take a while.\nTo continue, please choose below whether you would like to signup for a new EteSync 2.0 account, or login using an existing one.</string>
    <string name="migrate_v2_wizard_migrate_title">Migrating…</string>
    <string name="migrate_v2_wizard_migrate_progress">Migrating collection %d/%d</string>
    <string name="migrate_v2_wizard_migrate_progress_entries">Migrated entries %d/%d</string>
    <string name="migrate_v2_wizard_migrate_progress_done">Your account has been migrated.\nPlease verify everything was copied over correctly, and remove your old account once done.</string>
    <string name="migrate_v2_wizard_migrate_progress_done_malformed">Ignored %d malformed entries (probably safe to ignore).</string>
    <string name="app_settings">Settings</string>
    <string name="app_settings_user_interface">User interface</string>
    <string name="app_settings_notification_settings">Notification settings</string>
    <string name="app_settings_notification_settings_summary">Manage notification channels and their settings</string>
    <string name="app_settings_reset_hints">Reset hints</string>
    <string name="app_settings_reset_hints_summary">Re-enables hints which have been dismissed previously</string>
    <string name="app_settings_reset_hints_success">All hints will be shown again</string>
    <string name="app_settings_sync">Sync</string>
    <string name="app_settings_prefer_tasksorg">Prefer Tasks.org tasks provider</string>
    <string name="app_settings_connection">Connection</string>
    <string name="app_settings_override_proxy">Override proxy settings</string>
    <string name="app_settings_override_proxy_on">Use custom proxy settings</string>
    <string name="app_settings_override_proxy_off">Use system default proxy settings</string>
    <string name="app_settings_override_proxy_host">HTTP proxy host name</string>
    <string name="app_settings_override_proxy_port">HTTP proxy port</string>
    <string name="app_settings_security">Security</string>
    <string name="app_settings_distrust_system_certs">Distrust system certificates</string>
    <string name="app_settings_distrust_system_certs_on">System and user-added CAs won\'t be trusted</string>
    <string name="app_settings_distrust_system_certs_off">System and user-added CAs will be trusted (recommended)</string>
    <string name="app_settings_reset_certificates">Reset (un)trusted certificates</string>
    <string name="app_settings_reset_certificates_summary">Resets trust of all custom certificates</string>
    <string name="app_settings_debug">Debugging</string>
    <string name="app_settings_log_to_external_storage">Log to file</string>
    <string name="app_settings_log_to_external_storage_on">Disable to hide the notification and delete the logs</string>
    <string name="app_settings_log_to_external_storage_off">Enable to save log messages to file</string>
    <string name="app_settings_log_verbose">Verbose logging</string>
    <string name="app_settings_log_verbose_summary">Verbose logs may contain private information</string>
    <string name="app_settings_show_debug_info">Show debug info</string>
    <string name="app_settings_show_debug_info_details">View/share software and configuration details</string>
    <string name="app_settings_force_language">Force Language</string>
    <string name="app_settings_change_notification">Show change notifications</string>
    <string name="login_email_address">Email</string>
    <string name="login_password">Password</string>
    <string name="login_custom_server">EteSync Server URL</string>
    <string name="login_toggle_advanced">Show advanced settings</string>
    <string name="login_encryption_password">Encryption Password</string>
    <string name="login_encryption_check_password">* Please make sure you remember your password, as it can\'t be recovered if lost!</string>
    <string name="login_login">Log In</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_finish">Finish</string>
    <string name="login_enter_service_details">Enter Login Details</string>
    <string name="login_service_details_description">This is your login password, *not* your encryption password!</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="change_encryption_password_title">Change Encryption Password</string>
    <string name="change_encryption_password_new_password">New Encryption Password</string>
    <string name="settings_manage_account">Manage Account</string>
    <string name="settings_manage_account_summary">Change your payment info, plan and other account settings</string>
    <string name="settings_encryption">Encryption</string>
    <string name="settings_password">Authentication Password</string>
    <string name="settings_password_summary">Use a different authentication password</string>
    <string name="settings_enter_password">Enter your password:</string>
    <string name="settings_encryption_password">Encryption Password</string>
    <string name="settings_encryption_password_summary">Change your encryption password</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval">Sync interval</string>
    <string name="settings_sync_wifi_only">Sync over WiFi only</string>
    <string name="settings_sync_wifi_only_on">Synchronization is restricted to WiFi connections</string>
    <string name="settings_sync_wifi_only_off">Connection type is not taken into consideration</string>
    <string name="settings_sync_wifi_only_ssid">WiFi SSID restriction</string>
    <string name="settings_sync_wifi_only_ssid_message">Enter the name of a WiFi network (SSID) to restrict synchronization to this network, or leave blank for all WiFi connections.</string>
</resources>