<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_dark"
        android:title="@string/navigation_drawer_about"/>
    <item
        android:id="@+id/nav_app_settings"
        android:icon="@drawable/ic_settings_dark"
        android:title="@string/navigation_drawer_settings"/>

    <item android:title="@string/navigation_drawer_external_links">
        <menu>
            <item
                android:id="@+id/nav_website"
                android:icon="@drawable/ic_home_dark"
                android:title="@string/navigation_drawer_website"/>
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/ic_question_answer"
                android:title="@string/navigation_drawer_faq"/>
            <item
                android:id="@+id/nav_guide"
                android:icon="@drawable/ic_help_dark"
                android:title="@string/navigation_drawer_guide"/>
            <item
                android:id="@+id/nav_report_issue"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/navigation_drawer_report_issue"/>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_email_black"
                android:title="@string/navigation_drawer_contact"/>
        </menu>
    </item>

</menu>
