<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="@dimen/activity_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/login_type_headline"
                android:text="@string/login_enter_service_details"
                android:layout_marginBottom="14dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_service_details_description"
                android:layout_marginBottom="14dp"/>

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_address"
                android:inputType="textEmailAddress"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/url_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:inputType="textPassword"
                    android:hint="@string/login_password"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/login_forgot_password"
                android:textColor="@color/orangeA700"/>

            <CheckedTextView
                android:id="@+id/show_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginLeft="4dp"
                android:textSize="18sp"
                android:gravity="center_vertical"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:text="@string/login_toggle_advanced" />

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/advanced_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/custom_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_custom_server"
                    android:inputType="textUri"/>

            </net.cachapa.expandablelayout.ExpandableLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/stepper_nav_bar">

        <Button
            android:id="@+id/create_account"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login_signup"
            style="@style/stepper_nav_button"/>

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            style="@style/stepper_nav_button"/>

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login_login"
            style="@style/stepper_nav_button"/>

    </LinearLayout>
</LinearLayout>
