<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2013 – 2016 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/account_wizard_collections_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/account_wizard_collections_body" />

        <ProgressBar
            android:id="@+id/loading"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:keepScreenOn="true"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_holder"
        style="@style/stepper_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_skip"
            style="@style/stepper_nav_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/skip" />

        <Space
            style="@style/stepper_nav_button"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_create"
            style="@style/stepper_nav_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/create" />

    </LinearLayout>
</LinearLayout>
